Correções em relação ao ambiente de trabalho.

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app/index.js",
   "scripts": {
-    "build": "webpack",
     "start": "webpack-dev-server --open",
+    "build": "webpack",
     "watch": "webpack --watch"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
